# datasciencefinalproject

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
notebooks/: eda.ipynb  eda_cleaning.ipynb
src/: GLMs.py  LGBMs.py  _model_training.py  _version.py
src/data/: __init__.py  _load_data.py  _sample_split.py  cleaned_dataset.parquet
src/evaluation/: __init__.py  _cv_score.py  _evaluate_prediction.py
src/feature_engineering/: __init__.py  _discretizer.py  _log_transformer.py  _transformer.py
src/plotting/: __init__.py  _exploratory_plotting.py  _interpret_plotting.py  _model_plotting.py
tests/: test_discretizer.py  test_log_transformer.py
