[metadata]
name = src
description = Project for D100 and D400
long_description = file: README.md
long_description_content_type = text/markdown
author = Zihan Zhao
author_email = zz538@cam.ac.uk

[options]
include_package_data = true
install_requires =
python_requires = >=3.8
packages = find:


[options.packages.find]
include =
    src

[options.entry_points]
console_scripts =